--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ header {
   box-sizing: border-box;
   z-index: 5;
   transition: background-color 400ms linear;
-  /* opacity: 0; */
+  opacity: 0;
 }
 
 .scrolled {
@@ -279,7 +279,8 @@ a:visited {
   justify-content: center;
   position: relative;
   color: white;
-  background-image: url(./trees.jpg);
+  /* background-image: url(./trees.jpg); */
+  background-image: url(./trees-min.jpg);
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
@@ -292,6 +293,7 @@ a:visited {
 }
 
 .Title .name {
+  opacity: 0;
   font-size: 3.4vh;
   font-family: 'Fredoka One', cursive;
 }
@@ -300,6 +302,11 @@ a:visited {
   width: 100%;
   font-size: 2.5vh;
   font-family: 'Poppins', sans-serif;
+  opacity: 0;
+}
+
+.Title .arrow-down {
+  opacity: 0;
 }
 
 .Title .arrow-down a,
