--- a/src/App.css
+++ b/src/App.css
@@ -183,22 +183,22 @@ header li:hover .underline {
 .pop-up-menu {
   position: fixed;
   transition: all 400ms ease-in-out;
-  top: 0;
-  left: -100vw;
-  height: 100vh;
-  width: 100vw;
+  height: 0;
+  width: 0;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   overflow: hidden;
   display: flex;
   background-color: transparent;
-}
-
-.pop-up-menu {
   color: transparent;
 }
 
 .open {
-  left: 0;
   background-color: var(--gold);
+  width: 150vmax;
+  height: 150vmax;
 }
 
 .open .bar {
@@ -207,19 +207,22 @@ header li:hover .underline {
 
 .pop-up-menu li p {
   color: transparent;
+  transform: all 400ms linear;
 }
 
 .open li p {
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   z-index: 10;
 }
 
 .pop-up-menu ul{
-  margin: auto;
-  display: flex;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   height: 50vh;
-  width: 100%;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -334,9 +337,16 @@ a:visited {
   position: absolute;
   height: 100%;
   width: 100%;
-  background-image: url(./pattern.jpg);
-  background-size: 300px;
-  filter: invert(85%) sepia(50%) saturate(3223%) hue-rotate(319deg) brightness(89%) contrast(100%);
+  background-image: url(./about-2.JPG);
+  background-size: contain;
+  filter: grayscale(100%);
+}
+
+.filter {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 0, 0, .45);
 }
 
 .About .title {
@@ -376,7 +386,6 @@ a:visited {
   text-align: center;
   font-size: 2.3vmin;
   margin: 5vh auto;
-  /* text-shadow: 0 0 1px black; */
 }
 
 /* PROJECTS VIEW */
@@ -384,7 +393,6 @@ a:visited {
 .Projects {
   width: 100%;
   box-sizing: border-box;
-  /* padding: 0 10vw; */
 }
 
 .project {
@@ -394,7 +402,6 @@ a:visited {
   display: grid;
   padding-top: 10vh;
   box-sizing: border-box;
-  /* border: 1px solid red; */
 }
 
 #project-1 {
@@ -556,7 +563,9 @@ a:visited {
 }
 
 .contacts {
-  width: 275px;
+  max-width: 800px;
+  width: 50vw;
+  min-width: 300px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -653,5 +662,9 @@ a:visited {
 
   .arrow-down {
     display: none;
+  }
+
+  .contacts {
+    font-size: 12px;
   }
 }
