--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   background-color: white;
   position: relative;
   --gold: #e2b553;
-  --red: rgb(182,30,79);
+  --red: rgb(216, 0, 0);
 }
 
 .App {
@@ -348,7 +348,7 @@ a:visited {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 0, 0, .45);
+  background-color: rgba(216, 0, 0, .45);
 }
 
 .About .title {
