--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -408,16 +408,16 @@
     box-sizing: border-box;
   }
   
-  #project-1 {
+  #project-1, #project-3 {
     grid-template-columns: 2fr 3fr;
   }
   
-  #project-1 .project-information {
+  #project-1 .project-information, #project-3 .project-information {
     grid-column: 1 / 2;
     margin: 10vh auto auto 10vw;
   }
   
-  #project-1 .image-container {
+  #project-1 .image-container, #project-3 .image-container {
     grid-column: 2 / 3;
   }
   
@@ -447,6 +447,19 @@
     display: block;
     max-width:100vw;
     max-height:60vh;
+    width: auto;
+    height: auto;
+  }
+
+  #project-3 .image-container {
+    margin-top: 10vh;
+  }
+
+  #project-3 .image-container img {
+    margin: 0 auto auto auto;
+    display: block;
+    max-width: 100vw;
+    max-height: 50vh;
     width: auto;
     height: auto;
   }
@@ -600,9 +613,17 @@
     #project-2 .project-information {
       margin: auto;
     }
+
+    #project-3 .project-information {
+      margin: auto;
+    }
   
     #project-2 .image-container {
       order: 2;
+    }
+
+    #project-3 .image-container {
+      margin-top: 0vh;
     }
   
     .project-information {
