--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -382,23 +382,127 @@ a:visited {
 }
 
 .name-container {
+  position: absolute;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  top: 45%;
+  left: 50%;
   width: 100%;
-  margin: auto auto 45vh auto;
-  text-shadow: 0 0 8px black;
-}
-
-.Title .name {
-  opacity: 0;
-  font-size: 3.4vh;
-  font-family: 'Fredoka One', cursive;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   font-family: 'Julius Sans One', sans-serif;
+  color: white;
 }
 
-.Title .job {
-  width: 100%;
-  font-size: 2.5vh;
+.name {
+  font-size: 9vmin;
+  position: relative;
+}
+
+.name:hover {
+  -webkit-animation: glitch 300ms infinite;
+          animation: glitch 300ms infinite;
+}
+
+.name span {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.name:hover span:first-of-type {
+  -webkit-animation: glitch 330ms infinite;
+          animation: glitch 330ms infinite;
+  -webkit-transform: translate(-0.025em, -0.025em);
+          transform: translate(-0.025em, -0.025em);
+}
+
+.name span:first-of-type {
+  z-index: 2;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 50%, 0 30%);
+          clip-path: polygon(0 0, 100% 0, 100% 50%, 0 30%);
+  opacity: .8;
+}
+
+.name:hover span:last-of-type {
+  -webkit-animation: glitch 250ms infinite;
+          animation: glitch 250ms infinite;
+  -webkit-transform: translate(0.025em, 0.025em);
+          transform: translate(0.025em, 0.025em);
+}
+
+.name span:last-of-type {
+  z-index: 3;
+  -webkit-clip-path: polygon(0 50%, 100% 60%, 100% 100%, 0 100%);
+          clip-path: polygon(0 50%, 100% 60%, 100% 100%, 0 100%);
+  opacity: .8;
+}
+
+@-webkit-keyframes glitch {
+  0% {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
+  }
+  14% {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
+  }
+  25% {
+    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
+  }
+  69% {
+    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
+  }
+  70% {
+    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
+  }
+  99% {
+    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
+  }
+  100% {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
+  }
+}
+
+@keyframes glitch {
+  0% {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
+  }
+  14% {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
+  }
+  25% {
+    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
+  }
+  69% {
+    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
+  }
+  70% {
+    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
+  }
+  99% {
+    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
+  }
+  100% {
+    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
+  }
+}
+
+.job {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  font-size: 3vmin;
+  margin-top: 8vh;
   font-family: 'Poppins', sans-serif;
   opacity: 0;
+  width: 100%;
 }
 
 .Title .arrow-down {
@@ -831,9 +935,6 @@ a:visited {
   }
   .contacts {
     font-size: 12px;
-  }
-  .Title .name {
-    font-size: 3.0vh;
   }
   .Contact .title h2 {
     font-size: 5vh;
