--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -33,6 +33,8 @@
     z-index: 5;
     transition: background-color 400ms linear;
     opacity: 0;
+    font-family: 'Poppins', sans-serif;
+
   }
   
   .scrolled {
@@ -49,7 +51,7 @@
   
   .logo h2 {
     display: none;
-    font-family: 'Julius Sans One', sans-serif;
+    // font-family: 'Julius Sans One', sans-serif;
     box-sizing: border-box;
     font-size: 20px;
     transition: color 300ms linear;
@@ -78,7 +80,7 @@
   }
   
   header ul li {
-    font-size: 16px;
+    font-size: 14px;
     overflow: hidden;
     height: 100%;
     width: 100%;
@@ -91,6 +93,7 @@
   header li p {
    margin: auto;
    color: white;
+   color: black;
    transition: color 300ms linear;
    font-family: 'Poppins', sans-serif;
    width: 100%;
@@ -115,7 +118,7 @@
   
   header li:hover .underline {
     width: 100%;
-    background-color: white;
+    background-color: black;
   }
   
   .scrolled li:hover .underline {
@@ -282,12 +285,28 @@
     justify-content: center;
     position: relative;
     color: white;
-    background-image: url(../trees-min.jpg);
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
+    // background-image: url(../trees-min.jpg);
+    // background-position: top;
+    // background-size: cover;
+    // background-repeat: no-repeat;
   }
   
+  .portrait {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 20vh;
+    width: 20vh;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: 0 .5vmin .8vmin .1vmin rgb(0, 0, 0);
+
+    img {
+      height: 150%;
+    }
+  }
+
   .name-container {
     position: absolute;
     box-sizing: border-box;
@@ -297,12 +316,15 @@
     display: flex;
     justify-content: center;
     transform: translate(-50%, -50%);
-    font-family: 'Julius Sans One', sans-serif;
+    // font-family: 'Julius Sans One', sans-serif;
+    font-family: 'Poppins', sans-serif;
+
     color: white;
+    color: black;
   }
   
   .name {
-    font-size: 9vmin;
+    font-size: 3vmin;
     position: relative;
   }
   
@@ -386,6 +408,7 @@
     font-family: 'Poppins', sans-serif;
     opacity: 0;
     width: 100%;
+    color: black;
   }
   
   .Title .arrow-down {
@@ -395,6 +418,7 @@
   .Title .arrow-down a,
   .Title .arrow-down a:visited {
     color: white;
+    color: black;
   }
   
   
