--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,6 +8,10 @@
   position: relative;
   --gold: #e2b553;
   --red: rgb(216, 0, 0);
+  --light-off: #101112;
+  --light-on: #c4ffff;
+  --background-on: #112;
+  --background-off: #000;
 }
 
 .App {
@@ -375,25 +379,115 @@ a:visited {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  color: white;
+  background-color: var(--background-off);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100vh;
 }
 
-.portrait {
+.Title .text {
+  font-family: 'Sacramento', cursive;
+  text-align: center;
   position: absolute;
   top: 30%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  height: 20vh;
-  width: 20vh;
-  border-radius: 50%;
-  overflow: hidden;
-  -webkit-box-shadow: 0 0.5vmin 0.8vmin 0.1vmin black;
-          box-shadow: 0 0.5vmin 0.8vmin 0.1vmin black;
+  font-size: 15vmin;
+  color: var(--light-off);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  white-space: nowrap;
 }
 
-.portrait img {
-  height: 150%;
+.Title .text span {
+  -webkit-animation: blink linear infinite 1.8s;
+          animation: blink linear infinite 1.8s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+.Title .text span:nth-of-type(2) {
+  -webkit-animation: blink linear infinite 2.5s;
+          animation: blink linear infinite 2.5s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+@-webkit-keyframes blink {
+  78% {
+    color: var(--light-on);
+    text-shadow: inherit;
+  }
+  79% {
+    color: var(--light-off);
+  }
+  80% {
+    text-shadow: none;
+  }
+  81% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  82% {
+    color: var(--light-off);
+    text-shadow: none;
+  }
+  83% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  92% {
+    color: #333;
+    text-shadow: none;
+  }
+  93% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+}
+
+@keyframes blink {
+  78% {
+    color: var(--light-on);
+    text-shadow: inherit;
+  }
+  79% {
+    color: var(--light-off);
+  }
+  80% {
+    text-shadow: none;
+  }
+  81% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  82% {
+    color: var(--light-off);
+    text-shadow: none;
+  }
+  83% {
+    color: inherit;
+    text-shadow: inherit;
+  }
+  92% {
+    color: #333;
+    text-shadow: none;
+  }
+  93% {
+    color: inherit;
+    text-shadow: inherit;
+  }
 }
 
 .name-container {
