--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,10 @@
     position: relative;
     --gold: #e2b553;
     --red: rgb(216, 0, 0);
+    --light-off: #101112;
+    --light-on: #c4ffff;
+    --background-on: #112;
+    --background-off: #000;
   }
   
   .App {
@@ -284,28 +288,71 @@
     text-align: center;
     justify-content: center;
     position: relative;
-    color: white;
-    // background-image: url(../trees-min.jpg);
-    // background-position: top;
-    // background-size: cover;
-    // background-repeat: no-repeat;
-  }
-  
-  .portrait {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 20vh;
-    width: 20vh;
-    border-radius: 50%;
-    overflow: hidden;
-    box-shadow: 0 .5vmin .8vmin .1vmin rgb(0, 0, 0);
+    background-color: var(--background-off);
+    box-sizing: border-box;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    min-height: 100vh;
+    
+    .text {
+      font-family: 'Sacramento', cursive;
+      text-align: center;
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 15vmin;
+      color: var(--light-off);
+      box-sizing: border-box;
+      white-space: nowrap;
+    }
 
-    img {
-      height: 150%;
+    .text span {
+      animation: blink linear infinite 1.8s;
+      animation-delay: 3s;
+    }
+    
+    .text span:nth-of-type(2) {
+      animation: blink linear infinite 2.5s;
+      animation-delay: 3s;
     }
   }
+
+  @keyframes blink {
+    78% {
+       color: var(--light-on);
+       text-shadow: inherit;
+     }
+     79%{
+        color: var(--light-off);
+     }
+     80% {
+       text-shadow: none;
+     }
+     81% {
+       color: inherit;
+       text-shadow: inherit;
+     }
+     82% {
+       color: var(--light-off);
+       text-shadow: none;
+     }
+     83% {
+       color: inherit;
+       text-shadow: inherit;
+     }
+     92% {
+       color: #333;
+       text-shadow: none;
+     }
+     93% {
+       color: inherit;
+       text-shadow: inherit;
+     }
+   }
+  
 
   .name-container {
     position: absolute;
