--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -393,17 +393,95 @@ a:visited {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100vh;
+  overflow: hidden;
+}
+
+.Title .background {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url(../bricks);
+  background-size: 500px;
+  -webkit-filter: contrast(200%) grayscale(100%) brightness(10%);
+          filter: contrast(200%) grayscale(100%) brightness(10%);
+  -webkit-transform: rotateX(10deg);
+          transform: rotateX(10deg);
+}
+
+.Title .wrapper {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  width: 85vmin;
+  height: 26vmin;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.Title .border {
+  border: 1vmin solid var(--light-off);
+}
+
+.Title .top-border {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  border-bottom: none !important;
+  border-radius: 5vmin;
+}
+
+.Title .left-border {
+  position: absolute;
+  top: 0;
+  right: calc(30% + 15vmin);
+  left: 0;
+  bottom: 0;
+  border-right: none !important;
+  border-top-left-radius: 5vmin;
+  border-bottom-left-radius: 5vmin;
+}
+
+.Title .right-border {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: calc(70% + 15vmin);
+  bottom: 0;
+  border-left: none !important;
+  border-top-right-radius: 5vmin;
+  border-bottom-right-radius: 5vmin;
 }
 
 .Title .text {
   font-family: 'Sacramento', cursive;
   text-align: center;
   position: absolute;
-  top: 30%;
+  top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-size: 15vmin;
+  color: var(--light-off);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  white-space: nowrap;
+}
+
+.Title .job {
+  font-family: 'Sacramento', cursive;
+  font-family: 'Rubik', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  text-align: center;
+  position: absolute;
+  bottom: -2vmin;
+  left: 70%;
+  -webkit-transform: translate(-50%, 0%);
+          transform: translate(-50%, 0%);
+  font-size: 4vmin;
   color: var(--light-off);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -422,6 +500,18 @@ a:visited {
           animation: blink linear infinite 2.5s;
   -webkit-animation-delay: 3s;
           animation-delay: 3s;
+}
+
+.Title .ground {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  position: absolute;
+  top: 80vh;
+  right: 0;
+  height: 100vh;
+  left: 0;
+  background-image: url(../asphalt);
+  background-size: 1000px;
 }
 
 @-webkit-keyframes blink {
@@ -490,132 +580,6 @@ a:visited {
   }
 }
 
-.name-container {
-  position: absolute;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  top: 45%;
-  left: 50%;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  font-family: 'Poppins', sans-serif;
-  color: white;
-  color: black;
-}
-
-.name {
-  font-size: 3vmin;
-  position: relative;
-}
-
-.name:hover {
-  -webkit-animation: glitch 300ms infinite;
-          animation: glitch 300ms infinite;
-}
-
-.name span {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.name:hover span:first-of-type {
-  -webkit-animation: glitch 330ms infinite;
-          animation: glitch 330ms infinite;
-  -webkit-transform: translate(-0.025em, -0.025em);
-          transform: translate(-0.025em, -0.025em);
-}
-
-.name span:first-of-type {
-  z-index: 2;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 50%, 0 30%);
-          clip-path: polygon(0 0, 100% 0, 100% 50%, 0 30%);
-  opacity: .8;
-}
-
-.name:hover span:last-of-type {
-  -webkit-animation: glitch 250ms infinite;
-          animation: glitch 250ms infinite;
-  -webkit-transform: translate(0.025em, 0.025em);
-          transform: translate(0.025em, 0.025em);
-}
-
-.name span:last-of-type {
-  z-index: 3;
-  -webkit-clip-path: polygon(0 50%, 100% 60%, 100% 100%, 0 100%);
-          clip-path: polygon(0 50%, 100% 60%, 100% 100%, 0 100%);
-  opacity: .8;
-}
-
-@-webkit-keyframes glitch {
-  0% {
-    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-  }
-  14% {
-    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-  }
-  25% {
-    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
-  }
-  69% {
-    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
-  }
-  70% {
-    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
-  }
-  99% {
-    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
-  }
-  100% {
-    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-  }
-}
-
-@keyframes glitch {
-  0% {
-    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-  }
-  14% {
-    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-  }
-  25% {
-    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
-  }
-  69% {
-    text-shadow: 0.035em 0.035em 0 rgba(255, 0, 0, 0.75), 0.05em 0 0 rgba(0, 255, 0, 0.75), -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
-  }
-  70% {
-    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
-  }
-  99% {
-    text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75), 0.035em 0.035em 0 rgba(0, 255, 0, 0.75), 0.05em 0em 0 rgba(0, 0, 255, 0.75);
-  }
-  100% {
-    text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75), -0.05em -0.025em 0 rgba(0, 255, 0, 0.75), 0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-  }
-}
-
-.job {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  font-size: 3vmin;
-  margin-top: 8vh;
-  font-family: 'Poppins', sans-serif;
-  opacity: 0;
-  width: 100%;
-  color: black;
-}
-
 .Title .arrow-down {
   opacity: 0;
 }
@@ -626,7 +590,7 @@ a:visited {
   color: black;
 }
 
-/* ABOUT VIEW */
+/* ------------------------------------------ ABOUT VIEW --------------------------------- */
 .About {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
