--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -295,15 +295,93 @@
     flex-wrap: wrap;
     flex-direction: column;
     min-height: 100vh;
+    overflow: hidden;
+
+    .background {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-image: url(../bricks);
+      background-size: 500px;
+      filter: contrast(200%) grayscale(100%) brightness(10%);
+      transform: rotateX(10deg);
+    }
     
+    .wrapper {
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      width: 85vmin;
+      height: 26vmin;
+      transform: translate(-50%, -50%);
+    }
+
+    .border {
+      border: 1vmin solid var(--light-off);
+      // box-shadow: 0 -1vh 5vh, 0 0 3px, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+      // box-shadow: 0 -1vh 5vh #516ace, 0 0 3px #516ace, 0 0 1em #516ace, 0 0 0.5em #516ace, 0 0 0.1em #516ace, 0 10px 3px #000;
+    }
+
+    .top-border {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      border-bottom: none !important;
+      border-radius: 5vmin;
+      // box-shadow: 0 -.5vmin 2vmin #516ace;
+    }
+
+    .left-border {
+      position: absolute;
+      top: 0;
+      right: calc(30% + 15vmin);
+      left: 0;
+      bottom: 0;
+      border-right: none !important;
+      border-top-left-radius: 5vmin;
+      border-bottom-left-radius: 5vmin;
+      // box-shadow: -.6vmin .5vmin .5vmin #516ace;
+    }
+
+    .right-border {
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: calc(70% + 15vmin);
+      bottom: 0;
+      border-left: none !important;
+      border-top-right-radius: 5vmin;
+      border-bottom-right-radius: 5vmin;
+      // box-shadow: 1vmin 1vmin 2vmin 0 #516ace;
+    }
+
     .text {
       font-family: 'Sacramento', cursive;
       text-align: center;
       position: absolute;
-      top: 30%;
+      top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       font-size: 15vmin;
+      color: var(--light-off);
+      box-sizing: border-box;
+      white-space: nowrap;
+    }
+
+    .job {
+      font-family: 'Sacramento', cursive;
+      font-family: 'Rubik', sans-serif;
+      font-family: 'Yanone Kaffeesatz', sans-serif;
+      text-align: center;
+      position: absolute;
+      bottom: -2vmin;
+      left: 70%;
+      transform: translate(-50%, 0%);
+      font-size: 4vmin;
       color: var(--light-off);
       box-sizing: border-box;
       white-space: nowrap;
@@ -317,6 +395,17 @@
     .text span:nth-of-type(2) {
       animation: blink linear infinite 2.5s;
       animation-delay: 3s;
+    }
+
+    .ground {
+      transform-style: preserve-3d;
+      position: absolute;
+      top: 80vh;
+      right: 0;
+      height: 100vh;
+      left: 0;
+      background-image: url(../asphalt);
+      background-size: 1000px;
     }
   }
 
@@ -353,111 +442,6 @@
      }
    }
   
-
-  .name-container {
-    position: absolute;
-    box-sizing: border-box;
-    top: 45%;
-    left: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    transform: translate(-50%, -50%);
-    // font-family: 'Julius Sans One', sans-serif;
-    font-family: 'Poppins', sans-serif;
-
-    color: white;
-    color: black;
-  }
-  
-  .name {
-    font-size: 3vmin;
-    position: relative;
-  }
-  
-  .name:hover {
-      animation: glitch 300ms infinite;
-  }
-  
-  .name span {
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  
-  .name:hover span:first-of-type {
-    animation: glitch 330ms infinite;
-    transform: translate(-0.025em, -0.025em);
-  }
-  
-  .name span:first-of-type {
-    z-index: 2;
-    clip-path: polygon(0 0, 100% 0, 100% 50%, 0 30%);
-    opacity: .8;
-  }
-  
-  .name:hover span:last-of-type {
-    animation: glitch 250ms infinite;
-    transform: translate(0.025em, 0.025em);
-  }
-  
-  .name span:last-of-type {
-    z-index: 3;
-    clip-path: polygon(0 50%, 100% 60%, 100% 100%, 0 100%);
-    opacity: .8;
-  }
-  
-  @keyframes glitch {
-    0% { text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
-                      -0.05em -0.025em 0 rgba(0, 255, 0, 0.75),
-                       0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-      }
-    14% { text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
-                      -0.05em -0.025em 0 rgba(0, 255, 0, 0.75),
-                       0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-      }
-    25% { text-shadow:  0.035em 0.035em 0 rgba(255, 0, 0, 0.75),
-                        0.05em 0 0 rgba(0, 255, 0, 0.75),
-                       -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
-      }
-    69% { text-shadow:  0.035em 0.035em 0 rgba(255, 0, 0, 0.75),
-                        0.05em 0 0 rgba(0, 255, 0, 0.75),
-                       -0.05em -0.025em 0 rgba(0, 0, 255, 0.75);
-      }
-    70% { text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75),
-                        0.035em 0.035em 0 rgba(0, 255, 0, 0.75),
-                        0.05em 0em 0 rgba(0, 0, 255, 0.75);
-      }
-     99% { text-shadow: -0.05em -0.025em 0 rgba(255, 0, 0, 0.75),
-                        0.035em 0.035em 0 rgba(0, 255, 0, 0.75),
-                        0.05em 0em 0 rgba(0, 0, 255, 0.75);
-      }
-    100% { text-shadow: 0.05em 0 0 rgba(255, 0, 0, 0.75),
-                        -0.05em -0.025em 0 rgba(0, 255, 0, 0.75),
-                         0.035em 0.035em 0 rgba(0, 0, 255, 0.75);
-      }
-  }
-
-  
-
-
-
-
-
-
-  .job {
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 3vmin;
-    margin-top: 8vh;
-    font-family: 'Poppins', sans-serif;
-    opacity: 0;
-    width: 100%;
-    color: black;
-  }
-  
   .Title .arrow-down {
     opacity: 0;
   }
@@ -469,7 +453,7 @@
   }
   
   
-  /* ABOUT VIEW */
+  /* ------------------------------------------ ABOUT VIEW --------------------------------- */
   
   .About {
     box-sizing: border-box;
