--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,11 +1,4 @@
 :root {
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  background-color: white;
-  position: relative;
   --gold: #e2b553;
   --red: rgb(216, 0, 0);
   --light-off: #101112;
@@ -15,313 +8,53 @@
 }
 
 .App {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   overflow: hidden;
-}
-
-.background {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-image: url(../bricks);
-  background-size: 500px;
-  -webkit-filter: contrast(200%) grayscale(100%) brightness(10%);
-          filter: contrast(200%) grayscale(100%) brightness(10%);
+  background-color: black;
+  height: 1000vh;
+  width: 1000vw;
+  position: relative;
 }
 
 /* NAV BAR */
-header {
-  width: 100%;
-  height: 10vh;
+.Nav {
   position: fixed;
+  right: 0;
   top: 0;
   left: 0;
-  right: 0;
-  padding: 0 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  z-index: 5;
-  -webkit-transition: background-color 400ms linear;
-  transition: background-color 400ms linear;
-  opacity: 0;
-  font-family: 'Poppins', sans-serif;
+  z-index: 100;
 }
 
-.scrolled {
-  background-color: white;
-  -webkit-box-shadow: 0 0 5px 1px lightgray;
-          box-shadow: 0 0 5px 1px lightgray;
-}
-
-.logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100%;
-}
-
-.logo h2 {
-  display: none;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  font-size: 20px;
-  -webkit-transition: color 300ms linear;
-  transition: color 300ms linear;
-}
-
-.scrolled .logo h2 {
-  display: block;
-  color: var(--red);
-}
-
-header ul {
-  all: unset;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  list-style-type: none;
-  -webkit-transition: all 300ms linear;
-  transition: all 300ms linear;
-  height: 100%;
-  width: 400px;
-}
-
-header ul a {
-  height: 100%;
-  width: 100%;
-}
-
-header ul li {
-  font-size: 14px;
-  overflow: hidden;
-  height: 100%;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  overflow: hidden;
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-header li p {
-  margin: auto;
+.Nav .link {
+  height: 8vh;
+  width: 8vh;
+  border: .4vh solid white;
   color: white;
-  color: black;
-  -webkit-transition: color 300ms linear;
-  transition: color 300ms linear;
-  font-family: 'Poppins', sans-serif;
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  text-align: center;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1vh;
 }
 
-.scrolled li p {
-  color: var(--gold);
-  color: var(--red);
-}
-
-header li .underline {
-  margin: auto auto 0 auto;
-  width: 0%;
-  height: 3px;
-  -webkit-transition: all 400ms ease-in-out;
-  transition: all 400ms ease-in-out;
-}
-
-header li:hover .underline {
-  width: 100%;
-  background-color: black;
-}
-
-.scrolled li:hover .underline {
-  width: 100%;
-  background-color: var(--red);
-}
-
-.bar-container {
-  display: none;
-  position: relative;
-  height: 25px;
-  width: 30px;
-  z-index: 5;
+.Nav .link:hover {
   cursor: pointer;
 }
 
-.bar {
-  width: 100%;
-  height: 5px;
-  background-color: white;
-  border-radius: 5px;
-  position: absolute;
-  -webkit-transition: all 400ms linear;
-  transition: all 400ms linear;
-  -webkit-transform-origin: center;
-          transform-origin: center;
-}
-
-.scrolled .bar {
-  background-color: var(--red);
-}
-
-.bar-1 {
-  top: 0;
-  left: 0;
-}
-
-.open-bar-1 {
-  top: 0%;
-  left: 50%;
-  -webkit-transform: rotate(315deg) translate(-50%, -50%);
-          transform: rotate(315deg) translate(-50%, -50%);
-  background-color: var(--red);
-}
-
-.bar-2 {
-  top: 50%;
-  left: 0;
-  -webkit-transform: translate(0%, -50%);
-          transform: translate(0%, -50%);
-}
-
-#hidden-2 {
-  background-color: transparent;
-  -webkit-transform: translate(0, -50%) rotate(360deg);
-          transform: translate(0, -50%) rotate(360deg);
-}
-
-.bar-3 {
-  bottom: 0;
-}
-
-.open-bar-3 {
-  top: 0%;
-  right: 50%;
-  -webkit-transform: rotate(405deg) translate(65%, -120%);
-          transform: rotate(405deg) translate(65%, -120%);
-  background-color: var(--red);
-}
-
-.pop-up-menu {
-  position: fixed;
-  -webkit-transition: all 400ms ease-in-out;
-  transition: all 400ms ease-in-out;
-  height: 0;
-  width: 0;
-  border-radius: 50%;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: transparent;
-  color: transparent;
-}
-
-.open {
-  background-color: var(--gold);
-  background-color: white;
-  width: 150vmax;
-  height: 150vmax;
-}
-
-.open .bar {
-  background-color: white;
-}
-
-.pop-up-menu li p {
-  color: transparent;
-  -webkit-transform: all 400ms linear;
-          transform: all 400ms linear;
-}
-
-.open li p {
-  color: white;
-  color: var(--red);
-  font-size: 18px;
-  z-index: 10;
-}
-
-.pop-up-menu ul {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  height: 50vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
 /* GENERAL STYLES */
-.view {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  min-height: 100vh;
-}
-
 .title {
   font-family: 'Poppins', sans-serif;
   text-align: center;
@@ -386,6 +119,9 @@ a:visited {
 
 /* HOME VIEW */
 .Title {
+  position: absolute;
+  top: 0;
+  left: 50%;
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -393,18 +129,10 @@ a:visited {
   position: relative;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  min-height: 100vh;
-  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 
 .Title .wrapper {
@@ -876,8 +604,8 @@ a:visited {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 10vh 0 10vh 0;
-  position: relative;
   height: 100vh;
+  width: 100vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -891,27 +619,15 @@ a:visited {
   color: white;
   -webkit-box-shadow: 0 0 2px white;
           box-shadow: 0 0 2px white;
+  position: absolute;
+  top: 50%;
+  left: 100%;
+  -webkit-transform: translate(-100%, -50%);
+          transform: translate(-100%, -50%);
 }
 
 .About i {
   color: white;
-}
-
-.background-div {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  background-image: url(../about-2.JPG);
-  background-size: contain;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
-}
-
-.filter {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(216, 0, 0, 0.45);
 }
 
 .About .title {
@@ -968,23 +684,27 @@ a:visited {
   text-shadow: 0 0 20px black;
 }
 
-/* PROJECTS VIEW */
+/* ----------------------------------- PROJECTS VIEW ------------------------------------ */
 .Projects {
-  width: 100%;
+  width: 100vw;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
 }
 
 .project {
   height: 100vh;
   width: 100%;
-  position: relative;
   display: -ms-grid;
   display: grid;
-  padding-top: 10vh;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: white;
+  padding-top: 9vh;
 }
 
 #project-1, #project-3 {
@@ -1010,12 +730,6 @@ a:visited {
       grid-template-columns: 3fr 2fr;
 }
 
-#project-2 .image-container {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 1;
-  grid-column: 1 / 2;
-}
-
 #project-2 .project-information {
   -ms-grid-column: 2;
   -ms-grid-column-span: 1;
@@ -1023,9 +737,14 @@ a:visited {
   margin: 10vh 10vw auto auto;
 }
 
+#project-2 .image-container {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+}
+
 .project-information {
-  width: 20vw;
-  height: 30vh;
+  width: 60%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1042,19 +761,6 @@ a:visited {
   display: block;
   max-width: 100vw;
   max-height: 60vh;
-  width: auto;
-  height: auto;
-}
-
-#project-3 .image-container {
-  margin-top: 10vh;
-}
-
-#project-3 .image-container img {
-  margin: 0 auto auto auto;
-  display: block;
-  max-width: 100vw;
-  max-height: 50vh;
   width: auto;
   height: auto;
 }
@@ -1084,6 +790,10 @@ a:visited {
 
 .eatstagram h4 {
   font-family: 'Julius Sans One', sans-serif;
+}
+
+.borrel-beter h4 {
+  font-family: 'Spectral SC', serif;
 }
 
 .battleship h4 {
@@ -1138,6 +848,11 @@ a:visited {
 
 /* CONTACT VIEW */
 .Contact {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1199,34 +914,27 @@ a:visited {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding-bottom: 10vh;
+    border: 10px solid red;
+    padding-top: 2vh;
   }
-  #project-1 .project-information {
-    margin: auto;
-  }
-  #project-2 .project-information {
-    margin: auto;
-  }
-  #project-3 .project-information {
-    margin: auto;
+  .image-container {
+    height: 50vh;
+    width: 80vw;
   }
   #project-2 .image-container {
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
   }
-  #project-3 .image-container {
-    margin-top: 0vh;
-  }
   .project-information {
-    margin: 5vh auto 0 auto;
+    width: 80%;
     height: 25vh;
-    height: auto;
     min-width: 280px;
   }
   .project-title h4 {
@@ -1239,43 +947,12 @@ a:visited {
     text-align: center;
   }
   .project .image-container img {
-    margin: auto;
-    max-height: 50vh;
-    max-width: 90vw;
-  }
-}
-
-@media (max-width: 900px) {
-  .expanded {
-    display: none;
-  }
-  .logo {
-    -webkit-box-ordinal-group: 6;
-        -ms-flex-order: 5;
-            order: 5;
-    margin: 0;
-    /* z-index: 10; */
-  }
-  .bar-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    max-height: 100%;
+    max-width: 100%;
   }
 }
 
 @media (max-width: 500px) {
-  header {
-    padding: 10px 30px 0 10px;
-  }
   .About .title {
     font-size: 25px;
   }
