--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,18 +21,44 @@
 /* NAV BAR */
 .Nav {
   position: fixed;
-  right: 0;
   top: 0;
   left: 0;
+  width: 100vw;
+  z-index: 100;
+}
+
+.Nav .compass-container {
+  position: absolute;
+  top: 1vh;
+  left: 1vw;
+  height: 9vh;
+  width: 9vh;
+  cursor: pointer;
+}
+
+.Nav .compass-container img {
+  height: 100%;
+  width: 100%;
+  -webkit-filter: invert(97%) sepia(78%) saturate(1339%) hue-rotate(189deg) brightness(107%) contrast(103%) drop-shadow(0 0 1vmin #d2357b);
+          filter: invert(97%) sepia(78%) saturate(1339%) hue-rotate(189deg) brightness(107%) contrast(103%) drop-shadow(0 0 1vmin #d2357b);
+}
+
+.Nav .link-container {
+  width: 90vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-left: 10vh;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  z-index: 100;
+}
+
+.Nav .link-container .link {
+  opacity: 0;
+}
+
+.Nav .link-container .open {
+  opacity: 1;
 }
 
 .Nav .link {
@@ -51,10 +77,9 @@
       -ms-flex-align: center;
           align-items: center;
   margin: 1vh;
-}
-
-.Nav .link:hover {
   cursor: pointer;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
 }
 
 /* GENERAL STYLES */
@@ -66,11 +91,11 @@
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 a:visited {
-  color: black;
+  color: white;
 }
 
 .arrow-down {
@@ -140,73 +165,142 @@ a:visited {
 
 .Title .wrapper {
   position: absolute;
-  top: 40%;
-  left: 50%;
-  width: 85vmin;
-  height: 26vmin;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.Title .border {
-  border: 1vmin solid var(--light-off);
-}
-
-.Title .top-border {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  border-bottom: none !important;
-  border-radius: 5vmin;
-}
-
-.Title .left-border {
-  position: absolute;
-  top: 0;
-  right: calc(30% + 15vmin);
-  left: 0;
-  bottom: 0;
-  border-right: none !important;
-  border-top-left-radius: 5vmin;
-  border-bottom-left-radius: 5vmin;
-}
-
-.Title .right-border {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: calc(70% + 15vmin);
-  bottom: 0;
-  border-left: none !important;
-  border-top-right-radius: 5vmin;
-  border-bottom-right-radius: 5vmin;
-}
-
-.Title .text {
-  font-family: 'Sacramento', cursive;
-  text-align: center;
+  width: 50vmin;
+  height: 50vmin;
+  border-radius: 50%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 1vmin solid #4d4dff;
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  font-size: 15vmin;
+  -webkit-box-shadow: 0 0 100px .5vmin #4d4dff, 0 0 100px .5vmin #4d4dff inset;
+          box-shadow: 0 0 100px .5vmin #4d4dff, 0 0 100px .5vmin #4d4dff inset;
+}
+
+.Title .ring {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%) rotate(-20deg);
+          transform: translate(-50%, -50%) rotate(-20deg);
+  -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.6), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.6);
+          box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.6), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.6);
+  -webkit-animation: blinkRings 3s infinite;
+          animation: blinkRings 3s infinite;
+}
+
+@-webkit-keyframes blinkRings {
+  49% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+  50% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  52% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  53% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+  55% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+  56% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  58% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  59% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+}
+
+@keyframes blinkRings {
+  49% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+  50% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  52% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  53% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+  55% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+  56% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  58% {
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  59% {
+    -webkit-box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+            box-shadow: -0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7), 0.6vmin 0.6vmin 0.6vmin rgba(255, 255, 0, 0.7);
+  }
+}
+
+.Title .ring-1 {
+  width: 100vmin;
+  height: 22vmin;
+  -webkit-transform: translate(-50%, -50%) rotate(-20deg);
+          transform: translate(-50%, -50%) rotate(-20deg);
+}
+
+.Title .ring-2 {
+  width: 90vmin;
+  height: 18vmin;
+  -webkit-transform: translate(-50%, -50%) rotate(-20deg);
+          transform: translate(-50%, -50%) rotate(-20deg);
+}
+
+.Title .text {
+  font-family: 'Sacramento', cursive;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -60%) rotate(-15deg);
+          transform: translate(-50%, -60%) rotate(-15deg);
+  font-size: 14vmin;
   color: var(--light-off);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  white-space: nowrap;
+  line-height: 1em;
 }
 
 .Title .job {
   font-family: 'Yanone Kaffeesatz', sans-serif;
   text-align: center;
   position: absolute;
-  bottom: -2vmin;
-  left: 70%;
-  -webkit-transform: translate(-50%, 0%);
-          transform: translate(-50%, 0%);
+  bottom: 5vmin;
+  left: 80%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   font-size: 4vmin;
   color: var(--light-off);
   -webkit-box-sizing: border-box;
@@ -620,8 +714,6 @@ a:visited {
       -ms-flex-pack: center;
           justify-content: center;
   color: white;
-  -webkit-box-shadow: 0 0 2px white;
-          box-shadow: 0 0 2px white;
   position: absolute;
   top: 50%;
   left: 100%;
@@ -707,7 +799,7 @@ a:visited {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: white;
-  padding-top: 9vh;
+  padding: 9vh 2vw;
 }
 
 #project-1, #project-3 {
@@ -820,8 +912,10 @@ a:visited {
 }
 
 .button {
-  border: 3px solid var(--red);
-  color: var(--red);
+  border: 3px solid #fdfdfd;
+  -webkit-box-shadow: 0 0 2vmin .4vmin #c90819, 0 0 2vmin .4vmin #c90819 inset;
+          box-shadow: 0 0 2vmin .4vmin #c90819, 0 0 2vmin .4vmin #c90819 inset;
+  color: #fdfdfd;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   border-radius: 5px;
@@ -844,9 +938,8 @@ a:visited {
 }
 
 .button:hover {
-  background-color: var(--gold);
-  background-color: var(--red);
-  color: white;
+  -webkit-box-shadow: 0 0 3vmin .8vmin #c90819, 0 0 3vmin .8vmin #c90819 inset;
+          box-shadow: 0 0 3vmin .8vmin #c90819, 0 0 3vmin .8vmin #c90819 inset;
 }
 
 /* CONTACT VIEW */
@@ -856,18 +949,24 @@ a:visited {
   left: 50%;
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
+  height: 100vh;
+  width: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  height: calc(100vh-10px);
   padding: 10vh 0 20vh 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: white;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .Contact .title h2 {
@@ -878,11 +977,12 @@ a:visited {
 .Contact .button {
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  width: 200px;
+  width: 250px;
+  margin: auto;
 }
 
 .Contact .button {
-  font-size: 2vh;
+  font-size: 2vmin;
 }
 
 .contacts {
@@ -917,18 +1017,29 @@ a:visited {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    border: 10px solid red;
     padding-top: 2vh;
+  }
+  .project-information {
+    margin: 5vh auto 5vh auto !important;
   }
   .image-container {
     height: 50vh;
     width: 80vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   #project-2 .image-container {
     -webkit-box-ordinal-group: 3;
@@ -950,6 +1061,7 @@ a:visited {
     text-align: center;
   }
   .project .image-container img {
+    margin: unset !important;
     max-height: 100%;
     max-width: 100%;
   }
