--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,6 +18,12 @@
   position: relative;
 }
 
+::-webkit-scrollbar {
+  height: 0;
+  width: 0;
+  background-color: transparent;
+}
+
 /* NAV BAR */
 .Nav {
   position: fixed;
@@ -35,6 +41,8 @@
   height: 9vh;
   width: 9vh;
   cursor: pointer;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
 }
 
 .Nav .compass-container img {
@@ -44,8 +52,14 @@
           filter: invert(97%) sepia(78%) saturate(1339%) hue-rotate(189deg) brightness(107%) contrast(103%) drop-shadow(0 0 1vmin #d2357b);
 }
 
+.Nav .compass-container:hover {
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
 .Nav .link-container {
   width: 90vw;
+  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -55,19 +69,48 @@
 }
 
 .Nav .link-container .link {
+  -webkit-transform: translateY(-10vh);
+          transform: translateY(-10vh);
+}
+
+.Nav .link-container .link .link-name {
+  position: absolute;
+  top: 12vh;
   opacity: 0;
 }
 
 .Nav .link-container .open {
+  -webkit-transform: translateY(0) !important;
+          transform: translateY(0) !important;
+}
+
+.Nav .link-container .open .light-beam {
+  position: absolute;
+  bottom: 2vh;
+  background-color: transparent;
+  width: 2vw;
+  height: 6vh;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 8vh 3vh 1vh #14c8f9;
+          box-shadow: 0 8vh 3vh 1vh #14c8f9;
+  -webkit-animation: float 1000ms infinite;
+          animation: float 1000ms infinite;
+}
+
+.Nav .link-container .open .link-name {
   opacity: 1;
+  text-shadow: .1vmin .1vmin black, -.1vmin -.1vmin black, -.1vmin .1vmin black, .1vmin -.1vmin black;
+}
+
+.Nav .link-container .open img {
+  -webkit-animation: float 1000ms infinite;
+          animation: float 1000ms infinite;
 }
 
 .Nav .link {
   height: 8vh;
   width: 8vh;
-  border: .4vh solid white;
   color: white;
-  border-radius: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,6 +124,42 @@
   cursor: pointer;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
+}
+
+.Nav .link img {
+  height: 100%;
+  -webkit-filter: invert(82%) sepia(45%) saturate(436%) hue-rotate(94deg) brightness(101%) contrast(99%);
+          filter: invert(82%) sepia(45%) saturate(436%) hue-rotate(94deg) brightness(101%) contrast(99%);
+}
+
+@-webkit-keyframes float {
+  0% {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+  }
+  50% {
+    -webkit-transform: translate(0%, 5%);
+            transform: translate(0%, 5%);
+  }
+  100% {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+  }
+}
+
+@keyframes float {
+  0% {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+  }
+  50% {
+    -webkit-transform: translate(0%, 5%);
+            transform: translate(0%, 5%);
+  }
+  100% {
+    -webkit-transform: translate(0%, 0%);
+            transform: translate(0%, 0%);
+  }
 }
 
 /* GENERAL STYLES */
